--- a/src/MultiAlign/Windows/Viewers/Clusters/ClusterControl.xaml
+++ b/src/MultiAlign/Windows/Viewers/Clusters/ClusterControl.xaml
@@ -17,81 +17,11 @@
              d:DesignHeight="582">
 
     <UserControl.Resources>
-        <converters:BoolVisibilityConverter x:Key="UseDriftTimeConverter" FalseVisibility="Collapsed"></converters:BoolVisibilityConverter>
-        <converters:BoolWidthConverter x:Key="UseDriftTimeWidthConverter" ></converters:BoolWidthConverter>
 
         <DataTemplate x:Key="UMCFeatureTemplate">
-            <Border BorderThickness="1"                
-                Margin="5">
-                <Grid >
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Image
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Margin="5" 
-                        Width="16" 
-                        Height="16"                        
-                        Grid.RowSpan="2"
-                        Source="/MultiAlign;component/Resources/molecule.png"
-                        />
-                    <TextBlock 
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        FontSize="14"
-                        Margin="5" Text="Dataset" />
-                    <TextBlock 
-                        Grid.Row="0"
-                        Grid.Column="2"
-                        FontSize="14"
-                        Margin="5" Text="{Binding GroupID}" />
-
-                    <TextBlock
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        Margin="5" Text="Mass" />
-                    <TextBlock
-                        Grid.Row="1"
-                        Grid.Column="2"
-                        Margin="5" Text="NET"/>
-                    <TextBlock
-                        Grid.Row="1"
-                        Grid.Column="3"
-                        Margin="5" Text="Drift Time" />    
-                    
-                    <TextBlock
-                        Grid.Row="2"
-                        Grid.Column="1"
-                        Margin="5" Text="{Binding MassMonoisotopicAligned, StringFormat=N2}" />
-                    <TextBlock
-                        Grid.Row="2"
-                        Grid.Column="2"
-                        Margin="5" Text="{Binding RetentionTime, StringFormat=N2}" />
-                    <TextBlock
-                        Grid.Row="2"
-                        Grid.Column="3"
-                        Margin="5" Text="{Binding DriftTime, StringFormat=N2}" />
-
-                    <TextBlock
-                        Grid.Row="3"
-                        Grid.Column="1"
-                        Margin="5" Text="Charge State" />
-                    <TextBlock
-                        Grid.Row="3"
-                        Grid.Column="2"
-                        Margin="5" Text="{Binding ChargeState}" />
-                </Grid>
-            </Border>
+            <clusterViews:UMCSummaryView 
+                HorizontalAlignment="Stretch"
+                DataContext="{Binding}"/> 
         </DataTemplate>
     </UserControl.Resources>
 
@@ -118,8 +48,6 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="60*"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="40*"/>
             </Grid.RowDefinitions>
 
@@ -132,25 +60,18 @@
                     Width="128"
                     Header="Cluster Mass vs. NET"
                     >                    
-                    <WindowsFormsHost
-                        Margin="1,1,1,1"
+                    <ContentControl
+                        Margin="1"
                         Grid.Row="0"
-                        Grid.Column="0">
-                        <maCharts:SingleClusterChart
-                                x:Name="m_clusterChart"
-                                Title=""
-                                XAxisLabel="NET"
-                                LegendVisible="False"
-                                YAxisShortHand="ppm"
-                                XAxisShortHand="NET"
-                                />
-                    </WindowsFormsHost>
+                        Grid.Column="0"
+                        Content="{Binding ClusterChartHost}"
+                        >
+                    </ContentControl>
                 </TabItem>
                 <TabItem 
                     Style="{DynamicResource ResourceKey=SimpleTabItem}"
                     FontSize="16"
                     Width="196"
-                    Visibility="{Binding Path=UsesDriftTime , Converter={StaticResource ResourceKey=UseDriftTimeConverter}}"
                     Header="Cluster Mass vs. Drift Time"
                     >
 
@@ -170,60 +91,26 @@
                     </WindowsFormsHost>
                 </TabItem>
             </TabControl>
-            <GridSplitter
-                        Grid.Row="2"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="3"
-                        Height="3"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch"
-                        Margin="1"
-                        Background="#FFA0A0A0"/>
-           
-            <WindowsFormsHost   
-                Grid.Column="0"                
-                Grid.Row="4">
-                <maCharts:SingleUMCChart
-                                    x:Name="m_msFeaturePlot"
-                                    Title=""  
-                                    YAxisShortHand="ppm"
-                                    XAxisShortHand="scans"
-                                    LegendVisible="False"                
-                                    />
-            </WindowsFormsHost>
-            <Grid 
-                Grid.Row="3">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="20*"/>
-                </Grid.ColumnDefinitions>
-                <Label 
-                        FontSize="12"
-                        Margin="5"
-                        Foreground ="Gray"  
-                        VerticalContentAlignment="Center"                      
-                        Grid.Row="0"
-                        Grid.Column="0">Features</Label>
-                <ComboBox
-                            FontSize="14"
-                            HorizontalContentAlignment="Center"
-                            SelectedItem="{Binding UMCFeature, 
-                                        RelativeSource={RelativeSource AncestorType={x:Type UserControl}},
-                                        UpdateSourceTrigger=PropertyChanged,
-                                        Mode=TwoWay,
-                                        NotifyOnSourceUpdated=True}"
+
+                <ScrollViewer
+                    Margin ="5"
+                    HorizontalScrollBarVisibility="Hidden"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="2">                                    
+                    <ListBox
+                        
+                            FontSize="14"               
+                            HorizontalContentAlignment="Stretch"
+                            SelectedItem="{Binding SelectedFeature,                                 
+                                            UpdateSourceTrigger=PropertyChanged,
+                                            Mode=TwoWay,
+                                            NotifyOnSourceUpdated=True}"
                             ItemTemplate="{StaticResource UMCFeatureTemplate}"
-                            ItemsSource="{Binding Features, 
-                            RelativeSource={RelativeSource AncestorType={x:Type UserControl}},
-                            UpdateSourceTrigger=PropertyChanged,
-                            NotifyOnSourceUpdated=True}"                        
+                            ItemsSource="{Binding Features}"                        
                             Margin="5"
                             Grid.Column="1"/>
+                </ScrollViewer>
             </Grid>
-        </Grid>
         <GridSplitter                        
                         Grid.Column="1"
                         Width="3"
@@ -298,16 +185,10 @@
                     FontSize="10"
                     HorizontalContentAlignment="Center"
                     VerticalContentAlignment="Center"                      
-                    Grid.Row="0"/>
-                <WindowsFormsHost                                
-                        Grid.Row="2">
-                    <maCharts:SICChart
-                                        x:Name="m_sicChart"
-                                        Title="XIC"                        
-                                        TitleVisible="False"
-                                        LegendVisible="False"                
-                                        />
-                </WindowsFormsHost>                       
+                    Grid.Row="0"/>                
+                <ContentControl 
+                    Grid.Row="2"
+                    Content="{Binding XicChart}"/>
                 <Label 
                     Margin="5"
                     Foreground ="Gray"  
@@ -316,15 +197,10 @@
                     HorizontalContentAlignment="Center"
                     VerticalContentAlignment="Center"                      
                     Grid.Row="4"/>
-                <WindowsFormsHost                        
-                    Grid.Row="6" >
-                    <maCharts:MsFeatureChart
-                            x:Name="m_parentSpectra"
-                            TitleVisible="False"
-                            Title="MS"
-                            XAxisLabel="m/z"
-                            YAxisLabel="Intensity"/>
-                </WindowsFormsHost>
+                <ContentControl                         
+                    Grid.Row="6" 
+                    Content="{Binding ParentSpectraChart}"
+                    />
                 <GridSplitter
                         Grid.Row="3"            
                         Height="3"
