--- a/src/MultiAlign/App.xaml
+++ b/src/MultiAlign/App.xaml
@@ -27,6 +27,12 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+        <Style x:Key="BorderStyle" TargetType="Border">
+            <Setter Property="Margin"       Value="5"/>            
+            <Setter Property="BorderBrush"          Value="LightGray"/>
+            <Setter Property="BorderThickness"      Value="1"/>            
+        </Style>
         <Style x:Key="SimpleToggleButtonStyle" TargetType="ToggleButton">
             <Setter Property="FontFamily"   Value="Arial Narrow" />
             <Setter Property="FontSize"     Value="16" />
