--- a/src/MultiAlign/Windows/Viewers/Identifications/IdentificationDetail.xaml
+++ b/src/MultiAlign/Windows/Viewers/Identifications/IdentificationDetail.xaml
@@ -115,23 +115,24 @@
                             <Binding Path="Scan" />                    
                     </TextBlock.Text>
             </TextBlock>
-
-
-            <!-- Proteins -->
-            <Label
+            <Expander
                 Grid.Row="5"
                 Grid.Column="1"
-                Foreground="Gray">
-                Proteins
-            </Label>
-            <ListBox
-                    Margin="2"
-                    Grid.Row="5"
-                    Grid.Column="2"
-                    VerticalAlignment="Stretch"
-                    HorizontalContentAlignment="Stretch"
-                    ItemTemplate="{StaticResource ProteinDataTemplate}"
-                    ItemsSource="{Binding Path=MatchedProteins, UpdateSourceTrigger=PropertyChanged, NotifyOnSourceUpdated=True}" />
+                Grid.ColumnSpan="2"
+                Header="Proteins"
+                >
+                <DockPanel>
+                    <!-- Proteins -->
+                    <ListBox                        
+                            Margin="2"
+                            Grid.Row="5"
+                            Grid.Column="2"
+                            VerticalAlignment="Stretch"
+                            HorizontalContentAlignment="Stretch"
+                            ItemTemplate="{StaticResource ProteinDataTemplate}"
+                            ItemsSource="{Binding Path=MatchedProteins, UpdateSourceTrigger=PropertyChanged, NotifyOnSourceUpdated=True}" />
+                </DockPanel>
+            </Expander>
         </Grid>
      </Border>
 </UserControl>
