--- a/src/MultiAlign/App.xaml
+++ b/src/MultiAlign/App.xaml
@@ -1,5 +1,10 @@
 <Application x:Class="MultiAlign.App" 
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Startup="Application_Startup" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             Startup="Application_Startup" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             d1p1:Ignorable="d" 
+             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
   <Application.Resources>
     <Style x:Key="SimpleButtonStyle" TargetType="Button">
       <Setter Property="FontFamily" Value="Arial Narrow" />
@@ -205,6 +210,5 @@
         </Trigger>
       </Style.Triggers>
     </Style>
-    <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:MultiAlign.ViewModel" />
   </Application.Resources>
 </Application>
