--- a/src/MultiAlign/Windows/Wizard/CondensedAnalysisOptionsView.xaml
+++ b/src/MultiAlign/Windows/Wizard/CondensedAnalysisOptionsView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              
              mc:Ignorable="d" 
-             d:DesignHeight="800" d:DesignWidth="800">
+             d:DesignHeight="800" d:DesignWidth="1200">
     <UserControl.Resources>
         <DataTemplate x:Key="PresetTemplate">
             <Border BorderThickness="1"                
@@ -174,37 +174,39 @@
             Foreground="Gray"
             FontSize="18"
             Header="Experiment">
-                    <StackPanel>
-
-                        <Label Content="Experiment Presets"
-                        Grid.Row="0"
-                        VerticalContentAlignment="Center"
-                        Foreground="Gray"
-                        FontSize="14"/>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="300"/>
+                        </Grid.ColumnDefinitions>
+                    
+                        <Label Content="Experiment Presets"                        
+                                VerticalContentAlignment="Center"
+                                Foreground="Gray"
+                                FontSize="14"/>
                         <ComboBox
-                        Grid.Column="1"
-                        FontSize="16"
-                        Width="300"
-                        Margin="5"
-                        ItemTemplate="{StaticResource ResourceKey=ExperimentPresetTemplate}"
-                        SelectedItem="{Binding SelectedExperimentPreset, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
-                        ItemsSource="{Binding ExperimentPresets}"
-                        />
-
+                            FontSize="16"
+                            Width="290"
+                            Margin="5"
+                            Grid.Column="1"
+                            ItemTemplate="{StaticResource ResourceKey=ExperimentPresetTemplate}"
+                            SelectedItem="{Binding SelectedExperimentPreset, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
+                            ItemsSource="{Binding ExperimentPresets}"
+                            />
+                        
                         <CheckBox
-                    Margin="5"
-                    FontSize="16"
-                    IsChecked="{Binding Path=IsIonMobility, Mode=TwoWay}">
-                            Is this an Ion Mobility Experiment (IMS)?
+                            Margin="5"
+                            FontSize="12"
+                            Grid.Row="1"
+                            Grid.Column="0"
+                            IsChecked="{Binding Path=IsIonMobility, Mode=TwoWay}">
+                            Ion Mobility Experiment (IMS)?
                         </CheckBox>
-
-                        <CheckBox
-                    Margin="5"
-                    IsChecked="{Binding Path=HasMsMsFragmentation, Mode=TwoWay}"
-                    FontSize="16">
-                            Was there any MS/MS fragmentation?
-                        </CheckBox>
-                    </StackPanel>
+                    </Grid>
                 </GroupBox>
                 <Expander
                     IsExpanded="True"
@@ -227,57 +229,59 @@
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="300"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="200"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            <StackPanel
-                        Grid.ColumnSpan="2"
-                        Grid.Row="0">
-                                <Label Content="Instrument Presets"
-                        VerticalContentAlignment="Center"
-                        Foreground="Gray"
-                        FontSize="14"/>
-                                <ComboBox
-                            Grid.Column="1"
-                            FontSize="16"  
-                            Width="300"                      
-                            Margin="5"
-                            ItemTemplate="{StaticResource ResourceKey=PresetTemplate}"                                                        
-                            ItemsSource="{Binding InstrumentPresets}"
-                            SelectedItem="{Binding SelectedPreset, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
-                            />
-                            </StackPanel>
 
 
+                            <Label Content="Instrument Presets"
+                                    VerticalContentAlignment="Center"
+                                    Foreground="Gray"
+                                    Grid.Row="0"
+                                    Grid.Column="0"
+                                    FontSize="14"/>
+                            <ComboBox
+                                    FontSize="16"                                                       
+                                    Margin="5"
+                                    Grid.Row="0"
+                                    Grid.Column="1"  
+                                    Width="290"
+                                    ItemTemplate="{StaticResource ResourceKey=PresetTemplate}"                                                        
+                                    ItemsSource="{Binding InstrumentPresets}"
+                                    SelectedItem="{Binding SelectedPreset, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
+                                    />
 
                             <Label
-                        Foreground="Gray"
-                        FontSize="14"
-                        Margin="5"
-                        Grid.Row="1">
+                                Foreground="Gray"
+                                FontSize="14"
+                                Margin="5"
+                                Grid.Row="1">
                                 Precursor Mass Resolution
                             </Label>
                             <Label
-                        Foreground="Gray"
-                        FontSize="14"
-                        Margin="5"
-                        Grid.Row="2">
+                                Foreground="Gray"
+                                FontSize="14"
+                                Margin="5"
+                                Grid.Row="2">
                                 Fragmentation Window Size
                             </Label>
-
                             <Label
-                        Foreground="Gray"
-                        FontSize="14"
-                        Margin="5"
-                        Grid.Row="3">
-                                LC-Retention Time
+                                Foreground="Gray"
+                                FontSize="14"
+                                Margin="5"
+                                Grid.Row="3">
+                                        LC-Retention Time
                             </Label>
                             <Label
-                        Foreground="Gray"
-                        FontSize="14"
-                        Margin="5"
-                        Visibility="{Binding Path=IsIonMobility}"
-                        Grid.Row="4">
+                                Foreground="Gray"
+                                FontSize="14"
+                                Margin="5"
+                                Grid.Column="3"
+                                Visibility="{Binding Path=IsIonMobility}"
+                                Grid.Row="3">
                                 Ion Mobility
                             </Label>
                             <TextBox 
@@ -286,28 +290,24 @@
                         Grid.Row="1"
                         Grid.Column="1"                    
                         Text="{Binding Path=MassResolution, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
-
                             <TextBox Width="Auto"
                         Margin="5"
                         Grid.Row="2"
                         Grid.Column="1"
                         Text="{Binding Path=FragmentationTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
-
                             <TextBox 
                         Margin="5"
                         Grid.Row="3"
                         Grid.Column="1"
                         Width="Auto"
                         Text="{Binding Path=NETTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
-
                             <TextBox 
                         Width="Auto"
                         Margin="5"
-                        Grid.Row="4"
-                        Grid.Column="1"
+                        Grid.Row="3"
+                        Grid.Column="4"
                         Visibility="{Binding Path=IsIonMobility}"
                         Text="{Binding Path=DriftTimeTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
-
                             <Label
                         Foreground="Gray"
                         FontSize="14"
@@ -316,7 +316,6 @@
                         Grid.Row="1">
                                 ppm
                             </Label>
-
                             <Label                    
                         Foreground="Gray"
                         FontSize="14"
@@ -326,21 +325,28 @@
                                 Th.
                             </Label>
                             <Label                    
-                        Foreground="Gray"
-                        FontSize="14"
-                        Margin="5"
-                        Grid.Column="2"
-                        Grid.Row="3">
+                                Foreground="Gray"
+                                FontSize="14"
+                                Margin="5"
+                                Grid.Column="2"
+                                Grid.Row="3">
                                 NET
                             </Label>
-
+                            <Label                    
+                                Foreground="Gray"
+                                FontSize="14"
+                                Margin="5"
+                                Grid.Column="5"
+                                Grid.Row="3">
+                                ms
+                            </Label>
                             <Label
                                 Foreground="Gray"
                                 FontSize="14"
                                 Margin="5"
-                                Grid.Column="0"
+                                Grid.Column="3"
                                 Visibility="{Binding Path=IsIonMobility}"
-                                Grid.Row="5">
+                                Grid.Row="1">
                                 Low Mass (mono)
                             </Label>
                             <Label
@@ -348,20 +354,21 @@
                                 FontSize="14"
                                 Margin="5"
                                 Visibility="{Binding Path=IsIonMobility}"
-                                Grid.Row="6">
+                                Grid.Row="2"
+                                Grid.Column="3">
                                 High Mass(mono)
                             </Label>
                             <TextBox 
                                 Width="Auto"
                                 Margin="5"
-                                Grid.Row="5"
-                                Grid.Column="1"                    
+                                Grid.Row="1"
+                                Grid.Column="4"                    
                                 Text="{Binding Path=LowMassRange, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
                             <TextBox 
                                 Width="Auto"
                                 Margin="5"
-                                Grid.Row="6"
-                                Grid.Column="1"                    
+                                Grid.Row="2"
+                                Grid.Column="4"                    
                                 Text="{Binding Path=HighMassRange, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
 
                         </Grid>
@@ -387,10 +394,10 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Label
-                    Foreground="Gray"
-                    FontSize="14"
-                    Margin="5"
-                    Grid.Row="0" Grid.ColumnSpan="2">
+                            Foreground="Gray"
+                            FontSize="14"
+                            Margin="5"
+                            Grid.Row="0" Grid.ColumnSpan="2">
                             Feature Definition
                         </Label>
 
@@ -407,19 +414,47 @@
                     Margin="5"
                     Grid.Row="2" Grid.ColumnSpan="2">
                             Across Dataset Clustering
-                        </Label>
-
+                        </Label>                       
+                        <ComboBox 
+                            FontSize="16"
+                            Grid.Column="2"
+                            ItemsSource="{Binding Path=FeatureFindingAlgorithms}"
+                            SelectedItem="{Binding Path=SelectedFeatureFindingAlgorithm, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
+                                                   
                         <StackPanel 
                         Margin="5"
-                        Grid.Row="0"
+                        Grid.Row="1"
                         Grid.Column="2">
                             <ComboBox 
                         FontSize="16"
-                        ItemsSource="{Binding Path=FeatureFindingAlgorithms}"
-                        SelectedItem="{Binding Path=SelectedFeatureFindingAlgorithm, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
-                            <Expander
+                        ItemsSource="{Binding Path=AlignmentAlgorithms}"
+                        SelectedItem="{Binding Path=SelectedAlignmentAlgorithm, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
+                        />
+                        </StackPanel>
+                        <StackPanel 
+                        Margin="5"
+                        Grid.Row="2"
+                        Grid.Column="2">
+                            <ComboBox 
+                        FontSize="16"
+                        ItemsSource="{Binding Path=ClusteringAlgorithms}"
+                        SelectedItem="{Binding Path=SelectedClusteringAlgorithm, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
+                        />
+                        </StackPanel>
+                    </Grid>
+                </Expander>
+                <Expander
+                    Header="Filtering"
+                    Grid.Row="4"
+                    Grid.Column="1"
+                    Margin="5"
+                    FontSize="18"
+                    Foreground="Gray">   
+                    <Expander
+                        Margin="25,5,5,5"
+                        FontSize="14"
                         Foreground="Gray"
-                        Header="Parameters">
+                        Header="Features">
                                 <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto"/>
@@ -434,11 +469,11 @@
                                     </Grid.ColumnDefinitions>
 
                                     <Label
-                                Foreground="Gray"
-                                FontSize="14"
-                                Margin="5"                                
-                                Grid.Row="0">
-                                        Minimum Feature Length
+                                            Foreground="Gray"
+                                            FontSize="14"
+                                            Margin="5"                                
+                                            Grid.Row="0">   
+                                        Minimum Retention Time (scans)
                                     </Label>
                                     <TextBox 
                                 Margin="5"
@@ -484,34 +519,12 @@
 
                                 </Grid>
                             </Expander>
-                        </StackPanel>
-                        <StackPanel 
-                        Margin="5"
-                        Grid.Row="1"
-                        Grid.Column="2">
-                            <ComboBox 
-                        FontSize="16"
-                        ItemsSource="{Binding Path=AlignmentAlgorithms}"
-                        SelectedItem="{Binding Path=SelectedAlignmentAlgorithm, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
-                        />
-                        </StackPanel>
-                        <StackPanel 
-                        Margin="5"
-                        Grid.Row="2"
-                        Grid.Column="2">
-                            <ComboBox 
-                        FontSize="16"
-                        ItemsSource="{Binding Path=ClusteringAlgorithms}"
-                        SelectedItem="{Binding Path=SelectedClusteringAlgorithm, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
-                        />
-                        </StackPanel>
-                    </Grid>
                 </Expander>
                 <Label
-            Grid.Column="1"
-            Foreground="Gray"
-            FontSize="24"
-            >
+                    Grid.Column="1"
+                    Foreground="Gray"
+                    FontSize="24"
+                    >
                     Options
                 </Label>
             </Grid>
